Changelog
=========


2.2 (unreleased)
----------------

- Moved the workflow guards checks in to a TaskTransitionController and added Tests.
  [phgross]



2.1 (2012-01-13)
----------------

- Adjust task configuration, added ftw.mail.mail to the allowed content types of tasks.
  Is Allready released in the Hotfix 2.0.2.
  [phgross]

- #1299 Spalte 'In Bearbeitung' hinzufügen bei Dokumentenauflistung in einer Aufgabe
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1299/
  add new column 'checked_out' for the document tab in task-view
  [eschmutz]

- Single client setup: do not display the responsible_client in the task overview.
  [jone]

- Single client setup: hide responsible_client field if only one client is set up.
  [jone]


2.0.1 (2011-12-06)
------------------

- Fixed translation of task type "Forwarding".
  [lgraf]


2.0 (2011-11-17)
----------------

- Removed `linked` helper, now using the one from og.tabbedview.helpers
  [lgraf]

- Fixed related_items indexer for tasks: It used to return ALL relations,
  not just the ones from the context.
  Issue #1261 Fehlerhafte Assoziation von Dokument/Aufgaben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1261/
  [lgraf]

- Issue #1249 Mail: Beim Importieren eines E-Mails muss die Spalte Ausgangsdatum leer bleiben
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1249/
  back to ftw.table helper function for readable_date
  [eschmutz]

- removed majoractions, they are now inherited from the Documents tab.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1263
  [ttschanz]

- Fixed batching by using the ListingView from opengever.tabbedview which
  overrides the batching template to match the CSS in izug.basetheme
  [lgraf]


2.0b22 (2011-09-30)
-------------------

- Issue #1181 Unused ITransition entfernen und testanpassungen